# differential-datalog

d3log/: Cargo.toml  Makefile  d3.dl  d3_application.dl
d3log/src/: batch.rs  child.rs  dispatch.rs  json_framer.rs  main.rs  tcp_network.rs  transact.rs
rust/template/: Cargo.toml
rust/template/d3log/: Cargo.toml  README  d3_application.dl  d3_supervisor.dl  display.dl
rust/template/d3log/examples/: Makefile  dred_test.dl  dred_test.json  mini_skyline.dl  mini_skyline.json
rust/template/d3log/src/: batch.rs  broadcast.rs  datfile.rs  ddvalue_batch.rs  dispatch.rs  display.js  display.rs  dred.rs  error.rs  factset.rs  forwarder.rs  json_framer.rs  lib.rs  process.rs  record_batch.rs  record_set.rs  tcp_network.rs  thread_instance.rs  value_set.rs
rust/template/src/: d3main.rs  main.rs
src/Language/DifferentialDatalog/: Compile.hs
